<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:id="@+id/action_today_filter"
        android:title="@string/today"
        app:showAsAction="always|withText"
        android:orderInCategory="150"
        android:icon="@drawable/ic_action_today0"
        android:checked="false">
    </item>
    <item android:id="@+id/action_preferences"
          android:title="@string/preferences_title"
          app:showAsAction="always"
          android:orderInCategory="200"
          android:icon="@drawable/ic_action_preferences">
    </item>

</menu>
